Refactor state classes to simplify toString methods and update related tests